--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,9 @@ jobs:
     - name: Install checkout
       uses: actions/checkout@v2
       
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1
+      
     - name: Install SHFB
       uses: Bassman2/setup-SHFB@v1
       with:
